SERVER-50707 Coverity analysis defect 116233: Parse warning